--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpoffice/phpword": "^1.4",
         "phpstan/phpdoc-parser": "^2.3",
+        "picqer/php-barcode-generator": "^3.2",
         "stripe/stripe-php": "^19.0",
         "symfony/apache-pack": "*",
         "symfony/asset": "7.4.*",
